# ParticleSystem

./: .gitignore  CMakeLists.txt  HOW TO BUILD.txt  build_all.bat
Assets/Levels/: Test.blend  Test.blend1  Test.json
Assets/Levels/Models/: Cube.h2b  Cube.mtl  Icosphere.h2b  Sphere.h2b  Sphere.mtl
Dependencies/executables/: dropper4blend.py
Dependencies/gateware-main-25.286.16/: Gateware.h  LICENSE  README  README.md  version.txt
Dependencies/resources/: referenceRepos.txt
ParticleSystemApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  ParticleSystemApp.csproj  ParticleSystemApp.sln
Shaders/: FragmentShader.hlsl  LevelVertex.hlsl  VertexShader.hlsl
Shaders/ModelBased/: LevelPixel.hlsl
Source/: CCL.cpp  CCL.h  README.txt  main.cpp  precompiled.h  renderer.h  renderer_solo.h
Source/APP/: AppData.h  DefaultApp.cpp  DefaultApp.h  ParticleSystemApp.cpp  ParticleSystemApp.h  Window.hpp  WindowWithVulkanSurface.h
Source/APP/Engine/: Engine.cpp  Engine.h
Source/APP/Engine/Camera/: Camera.h
Source/APP/Engine/Particle/: ParticleComponents.h  ParticleSystemComponents.h
Source/APP/Engine/Renderer/: Renderer.cpp  Renderer.h
Source/APP/Engine/Renderer/DRAW/: DrawComponents.cpp  DrawComponents.h  VulkanBuffers.cpp  VulkanRenderer.cpp  VulkanRenderer.h
Source/APP/Engine/UI/: GUI.cpp  GUI.h  UIComponents.h  UILayer.cpp  UILayer.h
Source/APP/Engine/Utils/: CCL.cpp  IuvoUtils.cpp  IuvoUtils.h  UniversalComponents.h
Source/App/: App.cpp  App.h  AppManager.cpp  AppManager.h
Source/CAMERA/: Camera.cpp
Source/Camera/: Camera.h  FreeLookCamera.h
Source/DRAW/: DrawComponents.cpp  DrawComponents.h  VulkanBuffers.cpp  VulkanRenderer.cpp
Source/Engine/: Engine.cpp  Engine.h
Source/Engine/Camera/: Camera.h
Source/Engine/Particle/: ParticleComponents.h  ParticleSystemComponents.h
Source/Engine/Renderer/: DrawComponents.cpp  DrawComponents.h  Renderer.cpp  Renderer.h  VulkanBuffers.cpp  VulkanCoreContext.cpp
Source/Engine/Renderer/UI/: GUI.cpp  GUI.h
Source/PARTICLE/: ParticleComponents.h  ParticleSystemComponents.h
Source/UTIL/: FileIntoString.h  UniversalComponents.h
Source/UTIL/Iuvo/: Iuvare.cpp  Iuvo.h  IuvoCharacters.h  IuvoColors.h  IuvoConsole.h  IuvoDefines.h  IuvoEntities.h  IuvoInput.h  IuvoMath.h  IuvoNames.h  IuvoNumbers.h  IuvoRPG.h  IuvoRaster.h  IuvoStringVector.h  IuvoStructs.h  IuvoUtils.cpp  IuvoUtils.h
Source/Utils/: IuvoUtils.cpp  IuvoUtils.h  UniversalComponents.cpp  UniversalComponents.h  load_data_oriented.h
